fix z-index

--- a/src/app.css
+++ b/src/app.css
@@ -33,14 +33,14 @@
   position: absolute;
   top: 0;
   left: 0.5rem;
-  z-index: 5;
+  z-index: 1;
 }
 
 #clearSearch {
   position: absolute;
   top: 0;
   right: 0.5rem;
-  z-index: 5;
+  z-index: 1;
 }
 
 #submitSearch:focus, #clearSearch:focus {
